<resources>
    <string name="app_name">Secu_Ring</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>

    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello</string>
    <string name="text_title">SecuRing</string>

    <string name="log_out">Log Out</string>
    <string name="delete_this_user">Delete this user</string>

    <string name="unlock">Unlock</string>
    <string name="someone_is_at_the_door">Someone is at the door!</string>
    <string name="don_t_unlock">Don\'t unlock</string>
    <string name="photo_from_raspberry">Photo from raspberry</string>
    <string name="recent_visits">Recent visits</string>
    <string name="log_out_icon">log_out_icon</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="add_a_new_face">Add a new face</string>
    <string name="log_out_txt">LOG OUT</string>
    <string name="no_one_is_at_the_door_right_now">No one is at the door right now.</string>
    <string name="Check_if_someone_rang">Check if someone rang</string>
    <string name="open">Open</string>
    <string name="see_who_is_at_the_door">See who is at the door</string>
</resources>
