<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat

        android:nestedScrollingEnabled="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        tools:context=".activities.UsersMainPage">

<android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorTextHint"
        android:gravity="center"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_title"
            android:textSize="24sp"
            android:textColor="@color/colorBackground"
            app:fontFamily="@font/open_sans_bold"/>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_hello"
            android:textColor="@color/colorBackground"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackground"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <Button
            android:layout_marginTop="410dp"
            android:layout_marginStart="290dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/logging_out"
            android:textColor="@color/colorBackground"
            android:background="@drawable/logout"
            android:fontFamily="@font/open_sans_bold"/>
    <Button
            android:text="@string/delete_this_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="-120dp"
            android:textAllCaps="false"
            android:id="@+id/delete_user_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textSize="16sp"

            android:fontFamily="@font/open_sans_bold"/>

    <Button
            android:text="@string/recent_visits"
            android:layout_marginStart="60dp"
            android:layout_marginTop="-100dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"

            android:id="@+id/recent_visitors_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textSize="16sp"
            android:fontFamily="@font/open_sans_bold"/>


    <Button
            android:text="@string/add_a_new_face"
            android:layout_width="wrap_content"
            android:layout_marginStart="60dp"

            android:textAllCaps="false"
            android:textSize="16sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_height="wrap_content"
            android:id="@+id/add_new_face_btn"
            android:layout_marginTop="-110dp"
            android:fontFamily="@font/open_sans_bold"/>
    <TextView
            android:text="@string/log_out_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="143dp"
            android:layout_marginBottom="-70dp"
            android:id="@+id/logout_txt"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:fontFamily="@font/open_sans_bold"/>
    <Button
            android:text="@string/Check_if_someone_rang"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_marginTop="-200dp"

            android:layout_marginStart="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/see_known_faces_btn"
            android:fontFamily="@font/open_sans_bold"/>
    <TextView
            android:text="@string/no_one_is_at_the_door_right_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:layout_marginTop="-140dp"
            android:layout_marginBottom="180dp"
            android:id="@+id/no_one_at_the_door_txt"/>


</android.support.v7.widget.LinearLayoutCompat>