<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorTextHint"
            android:gravity="center"
            android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_title"
                android:textSize="20sp" android:textColor="@color/colorBackground"
                app:fontFamily="@font/open_sans_bold"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_hello" android:textColor="@color/colorBackground"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:text="@string/text_accounts"
            android:textColor="@android:color/black" />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <Button
            android:text="@string/log_out"
            android:layout_marginTop="500dp"
            android:layout_marginStart="270dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/button" android:background="@color/colorTextHint"
            android:textColor="@color/colorBackground"/>

</LinearLayout>
